--- a/environment.yaml
+++ b/environment.yaml
@@ -1,12 +1,10 @@
 name: smartathon
 channels:
-  - pytorch
   - nvidia
   - conda-forge
   - defaults
 dependencies:
   - opencv=4.5.2
-  - pytorch=1.13.1
   - numpy=1.23.2
   - ipykernel=6.19.2
   - ipywidgets=7.6.5
@@ -15,3 +13,4 @@ dependencies:
       - onnxruntime-gpu==1.13.1
       - matplotlib==3.6.3
       - pandas==1.5.3
+      - tqdm==4.64.1
